# Init-engineering

./: .ae-answers.yml  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SKILL.md  pyproject.toml  pyrightconfig.json
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: agent-spawn-timeout.md
.github/workflows/: ci.yml  publish.yml
.planning/: STATE.md
.planning/phases/02-code-review-command/: 02-REVIEW.md
.planning/phases/04-gates-cli/: 04-gates-cli-SUMMARY.md
.planning/phases/05-docs-ruff-cleanup/: 05-P1-B-cli-split-SUMMARY.md  05-docs-ruff-cleanup-SUMMARY.md
.planning/phases/06-v2-multi-agent-prep/: 06-03-SUMMARY.md  06-07-v2.2-G-checkpoint-state-typing-SUMMARY.md  06-08-v2.2-J-production-docs-SUMMARY.md  06-11-P1-C-readfiletool-sandbox-SUMMARY.md  06-12-P1-E-checkpoint-submodule-SUMMARY.md  2.3-G-SUMMARY.md  2.3-H-SUMMARY.md  2.3-J-SUMMARY.md  2.3-P0-A-SUMMARY.md  2.3-P0-A-contractgate-SUMMARY.md  2.4-P0-B-SUMMARY.md  2.4-P0-C-SUMMARY.md  2.4-P1-A-SUMMARY.md
_scratch/: smoke-phase-d-v23.py
auto_engineering/: __init__.py  cli.py  errors.py  skill.py  telemetry.py
auto_engineering/agents/: __init__.py  architect.py  base.py  critic.py  developer.py  parser.py  prompts.py
auto_engineering/checkpoint/: __init__.py  migrate.py
auto_engineering/cli/: __init__.py  __main__.py  checkpoint.py  dev_loop.py  helpers.py
auto_engineering/config/: __init__.py  environment.py  settings.py
auto_engineering/contracts/: __init__.py
auto_engineering/crew/: __init__.py  crew.py  process.py  task.py
auto_engineering/engine/: __init__.py  checkpoint.py  graph.py  loop.py  messages.py  state.py
auto_engineering/gates/: __init__.py  base.py  build.py  contract.py  coverage.py  gates.py  lint.py  safety.py  test.py  type_check.py
auto_engineering/init/: __init__.py  answers.py  config.py  config_loader.py  config_types.py  detector.py  detector_analyzers.py  errors.py  hooks.py  prompts.py  renderer.py  scaffold.py  scaffold_hooks.py  scaffold_lock.py  scaffold_phase_funcs.py  scaffold_phases.py  scaffold_question_eval.py  scaffold_render.py  scaffold_tasks_runner.py  scaffold_update.py
auto_engineering/init/_shared/: exclude.py  path_utils.py
auto_engineering/llm/: __init__.py  anthropic_provider.py
auto_engineering/loop/: __init__.py  checkpoint.py  convergence.py  orchestrator.py  plan.py  round.py  semantic_evaluator.py  state.py  types.py  version_utils.py
auto_engineering/loop/checkpoint/: __init__.py  _connection.py  _serialization.py  envelope.py  store.py
auto_engineering/loop/state/: __init__.py  channels.py  checkpoint_envelope.py  metrics.py
auto_engineering/runtime/: __init__.py  messages.py  mock.py  registry.py  runtime.py  task.py
auto_engineering/tasks/: __init__.py
auto_engineering/tools/: __init__.py  base.py  bash_tools.py  file_tools.py  git_tools.py  registry.py  test_tools.py
design/: BEACON.md  INDEX.md  INIT-LOOP-CONTRACT.md  LOOP-DEVELOPMENT-PLAN.md  REFACTORING-PLAN.md  TASKS.md  audit-backlog.md  init-PLAN.md  init-TODO.md.bak.20260624-1410  v1.0-AUDIT-SUPPLEMENT.md  v1.0-DESIGN.md  v1.0-INIT.md  v1.0-LOOP-AUDIT.md  v1.0-LOOP.md  v1.0-SHARED.md  v1.0-TEMPLATES.md  v2.3-Plan-Dev.md  v2.4-Plan-Dev.md  v2.5-Plan-Dev.md  v5.0-Design-Init.md
design/his_bak/: DESIGN-AUDIT.md  INDEX.md  INIT-LOOP-CONTRACT.md  audit-backlog.md  v5.0-Design-Init.md  v5.0-atdo-EXECUTION-PLAN.md  v5.3-detection-flow-fix-PLAN.md
docs/: TEMPLATE-VARS.md  api-reference.md  atdo-runtime-smoke-policy.md  e2e-real-run.md  gate-system.md  production-deployment.md  quickstart.md  troubleshooting.md
init_engineering/: __init__.py  errors.py  telemetry.py
init_engineering/cli/: __init__.py  __main__.py  _helpers.py
init_engineering/config/: settings.py
init_engineering/init/: answers.py  config.py  config_types.py  detector.py  detector_analyzers.py  prompts.py  scaffold_hooks.py  scaffold_phase_funcs.py  scaffold_prereq.py  scaffold_render.py  scaffold_update.py
init_engineering/init/_shared/: exclude.py
init_engineering/init/phases/: finalize.py
scripts/: atdo_smoke.py  setup.sh
skills/init-engineering/: SKILL.md
src/init_engineering/: __init__.py  skill.py  telemetry.py
src/init_engineering/_shared/: __init__.py  detection.py  io.py  path_utils.py
src/init_engineering/cli/: __init__.py  _click_backend.py  _helpers.py  _list_cmds.py  commands.py  subcommands.py
src/init_engineering/config/: __init__.py  environment.py
src/init_engineering/init/: __init__.py  _answers_io.py  _lazy_external.py  answers.py  config_loader.py  config_types.py  detector.py  detector_analyzers.py  detector_constants.py  detector_helpers.py  detector_qoder.py  errors.py  hooks.py  init-manifest.reference.json  init-manifest.schema.json  manifest.py  prompts.py  renderer.py  renderer_symlinks.py  scaffold.py  scaffold_hooks.py  scaffold_lock.py  scaffold_phase_funcs.py  scaffold_phases.py  scaffold_prereq.py  scaffold_question_eval.py  scaffold_render.py  scaffold_tasks_runner.py  scaffold_update.py
src/init_engineering/init/_shared/: __init__.py  (+4 more)
src/init_engineering/skill/: __init__.py  _parse.py  _runner.py  _types.py
tests/: __init__.py  _smoke_phase_d.py  conftest.py  test_agent_merge_p1a.py  test_agents_3.py  test_answers.py  test_anthropic_provider.py  test_cancellation.py  test_checkpoint.py  test_checkpoint_cli.py  test_checkpoint_envelope.py  test_checkpoint_migrate.py  test_cli.py  test_cli_commands.py  test_cli_integration.py  test_cli_params.py  test_cli_v2_agent_runtime_real.py  test_cli_v2_orchestrator.py  test_click_backend.py  test_config_loader_security.py  test_coverage_gap_fill.py  test_engine_state.py  test_environment.py  test_exception_paths.py  test_exclude.py  test_gates.py  test_git_tools.py  test_graph.py  test_hooks.py  test_init.py  test_init_config_loader.py  test_init_core_coverage.py  test_init_design_docs.py  test_init_e2e_scaffold.py  test_init_hooks_coverage.py  test_init_manifest.py  test_init_security.py  test_jinja_errors.py  test_loop.py  test_loop_checkpoint_load_fix.py  (+31 more)
(+131 files in other folders)
