[project]
name = "auto-engineering"
version = "0.1.0"
description = "团队级 Loop 工程 + 多 Agent 协作 + 项目环境初始化"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "钱敏健" },
]
keywords = ["agent", "loop", "scaffolding", "claude-api", "ai-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "anthropic>=0.39,<1",
    "binaryornot>=0.4,<1",
    "click>=8.1,<9",
    "packaging>=24,<27",
    "pydantic>=2.9,<3",
    "pyyaml>=6.0,<7",
    "jinja2>=3.1,<4",
    "pathspec>=1.1.1,<2",
]

# 精确锁定版本 — 避免依赖更新引入兼容性问题
[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-timeout>=2.4",
    "pytest-asyncio>=1.4",
    "ruff>=0.8",
    "pre-commit>=4",
]

[project.scripts]
ae = "auto_engineering.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
# RUF001/002/003: 全角字符(中文 docstring 常用「」「（）」，不属于 ambiguous)
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--timeout=60", "-p no:cacheprovider"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
