[project]
name = "auto-engineering"
version = "1.0.0"
description = "团队级 Loop 工程 + 多 Agent 协作 + 项目环境初始化"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "钱敏健" },
]
keywords = ["agent", "loop", "scaffolding", "claude-api", "ai-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
]

dependencies = [
    "click>=8.1,<9",
    "packaging>=24,<27",
    "pydantic>=2.9,<3",
    "pyyaml>=6.0,<7",
    "jinja2>=3.1,<4",
    "pathspec>=1.1.1,<2",
]

[project.urls]
Homepage = "https://github.com/qianminjian/Init-engineering"
Repository = "https://github.com/qianminjian/Init-engineering.git"
Issues = "https://github.com/qianminjian/Init-engineering/issues"

# 精确锁定版本 — 避免依赖更新引入兼容性问题
[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-timeout>=2.4",
    "pytest-asyncio>=1.4",
    "ruff>=0.8",
    "pre-commit>=4",
]

[project.scripts]
ae = "auto_engineering.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
# RUF001/002/003: 全角字符(中文 docstring 常用「」「（）」，不属于 ambiguous)
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--timeout=60", "-p no:cacheprovider"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
include = [
    "auto_engineering",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]
packages = ["auto_engineering"]
