[project]
name = "init-engineering"
version = "1.0.0"
description = "Init-Engineering — Claude Code Agent Skill 模式项目环境初始化工具"
readme = "README.md"
# DI-P1-3: requires-python 与 classifiers 一致性 — classifiers 列表 (3.11/3.12/3.13)
# 必须与 requires-python 范围匹配。上界 <3.14 防止 Python 3.14+ 静默装上,
# 实际未在该版本验证 (潜在 deprecation/f-string change/syntax warning 等)。
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
# 项目分发方式: 团队内部 git clone 到 ~/.agents/skills/init-engineering,
# 不发布到 PyPI。email 字段是 Python 包 metadata 要求, 用 maintainer
# noreply 占位即可 (实际联系走 GitHub Issues / repo description).
authors = [
    { name = "钱敏健", email = "noreply@qianminjian.com" },
]
keywords = ["agent", "init", "scaffolding", "claude-code", "ai-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
]

dependencies = [
    "click>=8.1,<9",
    "packaging>=24,<27",
    "pydantic>=2.9,<3",
    "pyyaml>=6.0,<7",
    "jinja2>=3.1,<4",
    "pathspec>=1.1.1,<2",
]

[project.urls]
Homepage = "https://github.com/qianminjian/Init-engineering"
Repository = "https://github.com/qianminjian/Init-engineering.git"
Issues = "https://github.com/qianminjian/Init-engineering/issues"

# 精确锁定版本 — 避免依赖更新引入兼容性问题
[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-timeout>=2.4",
    "pytest-asyncio>=1.4",
    "ruff>=0.8",
    "pre-commit>=4",
]

[project.scripts]
ae = "init_engineering.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
# RUF001/002/003: 全角字符(中文 docstring 常用「」「（）」，不属于 ambiguous)
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--timeout=60", "-p no:cacheprovider"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
# P2-9: lockfile 强制哈希校验 — uv.lock 已在仓库, 添加 `uv lock --check`
# 即可在 CI 校验 pyproject.toml / uv.lock 一致性, 防止依赖被悄悄改动
# (运行时仍需 --require-hashes 才强制 hash 校验, 见 security job)

[tool.hatch.build.targets.wheel]
packages = ["src/init_engineering"]
# D-P0-3: SKILL.md/README/CHANGELOG/LICENSE 必须进 wheel — Claude Code skill
# 注册需 SKILL.md, PyPI 页面渲染需 README,法律需 LICENSE,版本说明需 CHANGELOG
[tool.hatch.build.targets.wheel.force-include]
"README.md" = "README.md"
"CHANGELOG.md" = "CHANGELOG.md"
"LICENSE" = "LICENSE"
"skills/init-engineering/SKILL.md" = "SKILL.md"
